--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "project2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mnorthup2207/project2.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mnorthup2207/project2/issues"
-  },
-  "homepage": "https://github.com/mnorthup2207/project2#readme",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.3",
-    "socket.io": "^2.3.0"
-  }
+    "name": "project2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mnorthup2207/project2.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/mnorthup2207/project2/issues"
+    },
+    "homepage": "https://github.com/mnorthup2207/project2#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-handlebars": "^3.1.0",
+        "express-session": "^1.17.0",
+        "mysql2": "^2.1.0",
+        "passport": "^0.4.1",
+        "sequelize": "^5.21.3",
+        "socket.io": "^2.3.0"
+    }
 }
