--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.6",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.17.0",
         "mysql2": "^2.1.0",
