--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/mnorthup2207/project2#readme",
     "dependencies": {
+        "ajax": "0.0.4",
         "aws-sdk": "^2.611.0",
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
@@ -26,6 +27,7 @@
         "express-fileupload": "^1.1.6",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.17.0",
+        "jquery": "^3.4.1",
         "mysql2": "^2.1.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
