--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
         "express-handlebars": "^3.1.0",
         "express-session": "^1.17.0",
         "jquery": "^3.4.1",
+        "mysql": "^2.18.1",
         "mysql2": "^2.1.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "sequelize": "^5.21.3",
+        "sequelize": "^5.21.4",
         "socket.io": "^2.3.0"
     }
 }
